--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
 # excel_import_export
 openpyxl
-# currency_rate_update
-pandas
+# ax_product_if, currency_rate_update_mizuho
+pandas==0.25.3  # latest available version compatible with python-dateutil 2.7.3
