--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,5 @@ astor
 # excel_import_export
 openpyxl
 # ax_product_if
+numpy==1.23.1  # ver. 1.24.1 would throw AttributeError: module 'numpy' has no attribute 'bool'
 pandas==0.25.3  # latest available version compatible with python-dateutil 2.7.3
